src/client/components/ui/Header/styles.module.css
.container {
  padding: var(--spacing-sm) var(--spacing-lg);
  box-shadow: 0 1rem 3rem -1rem var(--color-primary-dark);
  position: fixed;
  width: 100%;
  top: 0;
  backdrop-filter: blur(10px);
}

.content {
  font-family: var(--font-mono);
  font-size: var(--font-size-sm);
  color: var(--color-text-light);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

